# nst

./: .gitignore  Cargo.toml  README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  BlockDetails.tsx  index.css  main.tsx
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/ubi-token/: Cargo.toml
pallets/ubi-token/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
