[workspace]
resolver = "2"
members = [
    "node",
    "runtime",
    "pallets/ubi-token",
]

[workspace.package]
authors = ["NST Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/example/nst"

[workspace.dependencies]
# Substrate dependencies
frame-support = { version = "29.0.0", default-features = false }
frame-system = { version = "29.0.0", default-features = false }
sp-core = { version = "29.0.0", default-features = false }
sp-io = { version = "31.0.0", default-features = false }
sp-runtime = { version = "32.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# Local pallets
pallet-ubi-token = { path = "pallets/ubi-token", default-features = false }

[profile.release]
panic = "unwind"
