[workspace]
resolver = "2"
members = [
    "node",
    "runtime",
    "pallets/ubi-token",
]

[workspace.package]
authors = ["NST Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/michaljach/nst"

[workspace.dependencies]
# Substrate dependencies (polkadot-sdk latest - compatible with Rust 1.92)
frame-support = { version = "45.0.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
frame-executive = { version = "45.0.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-inherents = { version = "40.0.0", default-features = false }
sp-offchain = { version = "40.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-consensus-aura = { version = "0.46.0", default-features = false }
sp-consensus-grandpa = { version = "27.0.0", default-features = false }

# Runtime pallets
pallet-balances = { version = "46.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-aura = { version = "44.0.0", default-features = false }
pallet-grandpa = { version = "45.0.0", default-features = false }
pallet-transaction-payment = { version = "45.0.0", default-features = false }

# WASM builder
substrate-wasm-builder = { version = "31.0.0" }

# Codec
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.0", default-features = false, features = ["derive"] }

# Local pallets
pallet-ubi-token = { path = "pallets/ubi-token", default-features = false }

[profile.release]
panic = "unwind"
