[package]
name = "nst-node"
version = "1.0.0"
description = "Node for the NST (Non Speculative Tokens) blockchain"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
futures = { version = "0.3", features = ["thread-pool"] }
serde_json = "1.0"

# Substrate client
sc-cli = { version = "0.37.0" }
sc-executor = { version = "0.33.0" }
sc-network = { version = "0.35.0" }
sc-service = { version = "0.36.0" }
sc-telemetry = { version = "16.0.0" }
sc-transaction-pool = { version = "29.0.0" }
sc-transaction-pool-api = { version = "29.0.0" }
sc-consensus = { version = "0.34.0" }
sc-consensus-manual-seal = { version = "0.36.0" }
sc-client-api = { version = "29.0.0" }
sc-offchain = { version = "30.0.0" }
sc-basic-authorship = { version = "0.35.0" }

# Substrate primitives
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-timestamp = { version = "27.0.0" }
sp-inherents = { version = "27.0.0" }
sp-keyring = { version = "32.0.0" }
sp-api = { version = "27.0.0" }
sp-blockchain = { version = "29.0.0" }
sp-block-builder = { version = "27.0.0" }
sp-consensus = { version = "0.33.0" }

# Frame
frame-system = { workspace = true, default-features = true }
pallet-transaction-payment = { version = "29.0.0" }
substrate-frame-rpc-system = { version = "29.0.0" }
pallet-transaction-payment-rpc = { version = "31.0.0" }

# JSON-RPC
jsonrpsee = { version = "0.22", features = ["server"] }

# Local
nst-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
default = []
runtime-benchmarks = ["nst-runtime/runtime-benchmarks"]
