[package]
name = "nst-node"
version = "1.0.0"
description = "Node for the NST (Non Speculative Tokens) blockchain"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
futures = { version = "0.3", features = ["thread-pool"] }
serde_json = "1.0"

# Substrate client (polkadot-sdk latest)
sc-cli = "0.57.0"
sc-executor = "0.47.0"
sc-network = "0.55.0"
sc-service = "0.56.0"
sc-telemetry = "30.0.0"
sc-transaction-pool = "44.0.0"
sc-transaction-pool-api = "43.0.0"
sc-consensus = "0.54.0"
sc-consensus-aura = "0.55.0"
sc-consensus-grandpa = "0.40.0"
sc-client-api = "44.0.0"
sc-offchain = "50.0.0"
sc-basic-authorship = "0.53.0"

# Substrate primitives (polkadot-sdk latest)
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-timestamp = "40.0.0"
sp-inherents = { workspace = true, default-features = true }
sp-keyring = "45.0.0"
sp-api = { workspace = true, default-features = true }
sp-blockchain = "43.0.0"
sp-block-builder = { workspace = true, default-features = true }
sp-consensus = "0.46.0"
sp-consensus-aura = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }

# Frame
frame-system = { workspace = true, default-features = true }
pallet-transaction-payment = { workspace = true, default-features = true }
substrate-frame-rpc-system = "49.0.0"
pallet-transaction-payment-rpc = "48.0.0"

# JSON-RPC
jsonrpsee = { version = "0.24", features = ["server"] }

# Local
nst-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = "11.0.0"

[features]
default = []
runtime-benchmarks = ["nst-runtime/runtime-benchmarks"]
